--- a/src/login.html
+++ b/src/login.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <!-- <link href="/dist/output.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="style.css">
+    <link href="/dist/output.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
-
 <body>
-
-    <div class="flex items-center justify-center h-screen bg-indigo-600">
+    <div class="flex items-center justify-center h-screen bg-red-700">
         <div class="p-6 bg-white rounded-md shadow-lg w-96">
             <h1 class="text-3xl font-semibold text-center"><i class="fa-solid fa-user"></i> Login</h1>
             <hr class="mt-3">
@@ -24,14 +21,12 @@
                 <input type="password" id="password" class="w-full px-2 py-1 text-base border focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="Enter Password..." />
             </div>
             <div class="mt-5">
-                <button type="submit" class="w-full py-1 font-semibold text-white bg-indigo-700 border-2 border-indigo-700 rounded-md hover:bg-transparent hover:text-indigo-700"><i class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;Login</button>
+                <button type="submit" class="w-full py-1 font-semibold text-white bg-red-800 border-2 border-red-800 rounded-md hover:bg-transparent hover:text-red-800"><i class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;Login</button>
             </div>
-              <div class="mt-3 text-center">
-                <p class="text-sm">No account? <a href="/src/register.html" class="font-semibold text-indigo-800">Register here</a></p>
-              </div>
+            <div class="mt-3 text-center">
+                <p class="text-sm">No account? <a href="/src/register.html" class="font-semibold text-red-900">Register here</a></p>
+            </div>
         </div>
     </div>
-
 </body>
-
 </html>
