--- a/src/register.html
+++ b/src/register.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     <title>Register</title>
 </head>
-
 <body>
-
-    <div class="flex items-center justify-center h-screen bg-indigo-600">
+    <div class="flex items-center justify-center h-screen bg-red-700">
         <div class="p-6 bg-white rounded-md shadow-lg w-96">
             <h1 class="block text-3xl font-semibold text-center"><i class="fa-solid fa-user"></i> Register</h1>
             <hr class="mt-3">
             <div class="mt-3">
                 <label for="username" class="block mb-2 text-base">Username</label>
-                <input type="text" id="username" class="w-full px-2 py-1 text-base border focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="Enter Username..." />
+                <input type="text" id="username" class="w-full px-2 py-1 text-base border border-gray-600 rounded focus:outline-none" placeholder="Enter Username..." />
             </div>
             <div class="mt-3">
                 <label for="password" class="block mb-2 text-base">Password</label>
-                <input type="password" id="password" class="w-full px-2 py-1 text-base border focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="Enter Password..." />
+                <input type="password" id="password" class="w-full px-2 py-1 text-base border border-gray-600 rounded focus:outline-none" placeholder="Enter Password..." />
             </div>
             <div class="mt-3">
-                <label for="username" class="block mb-2 text-base">Name</label>
-                <input type="text" id="username" class="w-full px-2 py-1 text-base border focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="Enter Name..." />
+                <label for="name" class="block mb-2 text-base">Name</label>
+                <input type="text" id="name" class="w-full px-2 py-1 text-base border border-gray-600 rounded focus:outline-none" placeholder="Enter Name..." />
             </div>
             <div class="mt-3">
-                <label for="username" class="block mb-2 text-base">Email</label>
-                <input type="text" id="username" class="w-full px-2 py-1 text-base border focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="Enter Email..." />
+                <label for="email" class="block mb-2 text-base">Email</label>
+                <input type="text" id="email" class="w-full px-2 py-1 text-base border border-gray-600 rounded focus:outline-none" placeholder="Enter Email..." />
             </div>
             <div class="mt-5">
-                <button type="submit" class="w-full py-1 font-semibold text-white bg-indigo-700 border-2 border-indigo-700 rounded-md hover:bg-transparent hover:text-indigo-700"><i class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;Register</button>
+                <button type="submit" class="w-full py-1 font-semibold text-white bg-red-800 border-2 border-red-800 rounded-md hover:bg-transparent hover:text-red-800"><i class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;Register</button>
             </div>
             <div class="mt-3 text-center">
-                <p class="text-sm">Already have an account? <a href="/src/login.html" class="font-semibold text-indigo-800">Login here</a></p>
+                <p class="text-sm">Already have an account? <a href="/src/login.html" class="font-semibold text-red-900">Login here</a></p>
             </div>
         </div>
     </div>
-
 </body>
-
 </html>
