amélioration form incident

--- a/src/incident.html
+++ b/src/incident.html
@@ -28,10 +28,10 @@
 			
 			<form class="flex flex-col justify-center">
 				<label for="description" class="mb-1">Description</label>
-				<textarea id="description" name="description" rows="8" cols="46" maxlength="400" placeholder="décrivez l'incident" required class="resize-none px-2 py-1 mb-4 rounded border-2 focus:outline-none focus:ring-0 focus:border-gray-600"></textarea>
+				<textarea id="description" name="description" rows="8" cols="46" maxlength="400" placeholder="décrivez l'incident" required class="resize-none px-2 py-1 mb-4 rounded border-2 border-gray-100 bg-gray-100 focus:outline-none focus:ring-0 focus:border-gray-400"></textarea>
 				<label class="mb-1" for="adresse">Adresse</label>
-				<input type="text" id="adresse" name="adresse" placeholder="exemple: 21, Avenue Rogier, Bruxelles" required class="px-2 py-1 mb-4 rounded border-2 focus:outline-none focus:ring-0 focus:border-gray-600">
-				<input type="submit" value="Publier" class="py-2 px-4 text-white font-semibold bg-red-800 rounded focus:bg-red-900">
+				<input type="text" id="adresse" name="adresse" placeholder="exemple: 21, Avenue Rogier, Bruxelles" required class="px-2 py-1 mb-4 rounded border-2 border-gray-100 bg-gray-100 focus:outline-none focus:ring-0 focus:border-gray-400">
+				<input type="submit" value="Publier" class="py-2 px-4 text-white font-semibold bg-red-800 rounded border border-red-800 focus:border-white transition-all hover:bg-red-900 hover:border-red-900">
 			</form>
 		</div>
 	</main>
