ajout Titre dans form incident

--- a/src/incident.html
+++ b/src/incident.html
@@ -8,10 +8,10 @@
   <title>Incident</title>
 </head>
 
-<body class="bg-red-700">
+<body class="bg-gradient-to-br from-red-400 to-red-700">
 	
 	<!-- EXEMPLE DE NAV BAR A ENLEVER PAR LA SUITE -->
-	<nav class="fixed top-0 right-0 left-0 z-10">
+	<nav class="fixed top-0 right-0 left-0 z-10 shadow-lg">
 		<ul class="flex justify-around items-center p-4 bg-white">
 			<li><a href="#" class="p-2 m-4 border-2 border-black">link1</a></li>
 			<li><a href="#" class="p-2 m-4 border-2 border-black">link2</a></li>
@@ -23,15 +23,18 @@
 	<main class="flex justify-center items-center min-h-screen">  <!-- min-h-screen = prend tt la hauteur possible -->
 		<div class="w-96 p-6 rounded-md bg-white shadow-lg">
 			<h1 class="text-center pb-2 mb-4 text-3xl font-bold border-b">
+				⚠️<br>
 				Signaler un incident
 			</h1>
 			
 			<form class="flex flex-col justify-center">
+				<label for="titre" class="mb-1">Titre</label>
+				<input type="text" id="titre" name="titre" placeholder="soyez bref" required class="px-2 py-1 mb-4 rounded border-2 border-gray-100 bg-gray-100 focus:outline-none focus:ring-0 focus:border-gray-400">
 				<label for="description" class="mb-1">Description</label>
 				<textarea id="description" name="description" rows="8" cols="46" maxlength="400" placeholder="décrivez l'incident" required class="resize-none px-2 py-1 mb-4 rounded border-2 border-gray-100 bg-gray-100 focus:outline-none focus:ring-0 focus:border-gray-400"></textarea>
 				<label class="mb-1" for="adresse">Adresse</label>
-				<input type="text" id="adresse" name="adresse" placeholder="exemple: 21, Avenue Rogier, Bruxelles" required class="px-2 py-1 mb-4 rounded border-2 border-gray-100 bg-gray-100 focus:outline-none focus:ring-0 focus:border-gray-400">
-				<input type="submit" value="Publier" class="py-2 px-4 text-white font-semibold bg-red-800 rounded border border-red-800 focus:border-white transition-all hover:bg-red-900 hover:border-red-900">
+				<input type="text" id="adresse" name="adresse" placeholder="exemple: 21, Rue des Wallons" required class="px-2 py-1 mb-4 rounded border-2 border-gray-100 bg-gray-100 focus:outline-none focus:ring-0 focus:border-gray-400">
+				<input type="submit" value="Publier" class="py-2 px-4 text-red-700 font-semibold bg-transparent rounded border border-red-700 transition-all duration-450 ease-in-out hover:bg-gradient-to-r hover:from-red-700 hover:to-red-500 hover:text-white focus:border-white">
 			</form>
 		</div>
 	</main>
