add custom gradient

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <header class="py-3 bg-red-800 drop-shadow-md">
+  <header class="py-3 drop-shadow-md main-gradient">
     <div class="flex flex-row items-center justify-between w-4/5 mx-auto ">
       <div id="logo-name" class="flex items-center">
         <img src="/public/images/ferris.jpg" alt="Ferris" class="box-border rounded-full w-14 h-14">
@@ -25,7 +25,7 @@
 
   <div class="flex items-center justify-between w-4/5 pt-12 mx-auto">
     <button type="button"
-      class="text-white bg-red-800 hover:bg-red-900 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 focus:outline-none">Signaler
+      class="text-white main-gradient main-gradient-hover font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 focus:outline-none">Signaler
       un incident</button>
 
     <input type="text" name="Search" placeholder="Recherche"
