--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="../dist/output.css" rel="stylesheet">
 </head>
 
 <body>
   <header class="py-3 drop-shadow-md main-gradient">
     <div class="flex flex-row items-center justify-between w-4/5 mx-auto ">
       <div id="logo-name" class="flex items-center">
-        <img src="/public/images/ferris.jpg" alt="Ferris" class="box-border rounded-full w-14 h-14">
+        <img src="../public/images/ferris.jpg" alt="Ferris" class="box-border rounded-full w-14 h-14">
         <h1 class="ml-5 text-2xl font-bold text-white">Website name</h1>
       </div>
       <nav class="flex justify-end w-1/2 text-white ">
