--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       class="text-white main-gradient main-gradient-hover font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 focus:outline-none">Signaler
       un incident</button>
 
-    <input type="text" name="Search" placeholder="Recherche"
+    <input type="search" name="Search" placeholder="Recherche"
       class="block w-1/5 py-2 pl-3 leading-normal text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-red-700">
 
   </div>
