--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,99 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="../dist/output.css" rel="stylesheet">
 </head>
 
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+  <header class="py-3 drop-shadow-md main-gradient">
+    <div class="flex flex-row items-center justify-between w-4/5 mx-auto ">
+      <div id="logo-name" class="flex items-center">
+        <img src="../public/images/ferris.jpg" alt="Ferris" class="box-border rounded-full w-14 h-14">
+        <h1 class="ml-5 text-2xl font-bold text-white">Website name</h1>
+      </div>
+      <nav class="flex justify-end w-1/2 text-white ">
+        <a href="#" class="mr-6 underline">Accueil</a>
+        <a href="#" class="mr-6 hover:underline">Signaler un incident</a>
+        <a href="#" class="hover:underline ">Login/Username</a>
+      </nav>
+    </div>
+  </header>
+
+
+  <div class="flex items-center justify-between w-4/5 pt-12 mx-auto">
+    <button type="button"
+      class="text-white main-gradient main-gradient-hover font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 focus:outline-none">Signaler
+      un incident</button>
+
+    <input type="search" name="Search" placeholder="Recherche"
+      class="block w-1/5 py-2 pl-3 leading-normal text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-red-700">
+
+  </div>
+
+  <div class="flex justify-center pt-4 overflow-x-auto">
+    <table class="w-4/5 divide-y divide-gray-200 dark:divide-gray-700">
+      <thead>
+        <tr>
+          <th scope="col" class="px-6 py-3 text-xs font-medium text-left text-gray-500 uppercase">Titre</th>
+          <th scope="col" class="px-6 py-3 text-xs font-medium text-left text-gray-500 uppercase">Lieu</th>
+          <th scope="col" class="px-6 py-3 text-xs font-medium text-left text-gray-500 uppercase">Nom Prénom</th>
+          <th scope="col" class="px-6 py-3 text-xs font-medium text-left text-gray-500 uppercase">Date</th>
+        </tr>
+      </thead>
+      <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
+        <!-- Repeat this block for each row -->
+        <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">Accident
+            circulation</td>
+          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap dark:text-gray-200">Boulevard General Wahis 182
+          </td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">John Doe</td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">30/09/2023</td>
+          <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
+            <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
+          </td>
+        </tr>
+        <!-- Repeat the block above for each row -->
+
+        <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">Chute d'Objet en
+            Zone Publique</td>
+          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap dark:text-gray-200">Boulevard General Wahis 182
+          </td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">John Doe</td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">30/09/2023</td>
+          <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
+            <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
+          </td>
+        </tr>
+
+        <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">Incendie</td>
+          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap dark:text-gray-200">Boulevard General Wahis 182
+          </td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">John Doe</td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">30/09/2023</td>
+          <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
+            <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
+          </td>
+        </tr>
+
+
+      </tbody>
+    </table>
+  </div>
+
+  <div id="date" class="absolute -translate-x-1/2 bottom-10 left-1/2">
+  </div>
+
+  <script>
+    let today = new Date();
+    let day = today.getDay().toString().length == 1 ? "0" + today.getDay() : today.getDay();
+    let month = today.getMonth().toString().length == 1 ? "0" + today.getMonth() : today.getMonth();
+    let year = today.getFullYear();
+    let formatted = "Date du jour: " + day + "/" + month + "/" + year;
+    document.getElementById("date").innerText = formatted;
+  </script>
 </body>
 
 </html>
