remove dark classes

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="flex justify-center pt-4 overflow-x-auto">
-    <table class="w-4/5 divide-y divide-gray-200 dark:divide-gray-700">
+    <table class="w-4/5 divide-y divide-gray-200 ">
       <thead>
         <tr>
           <th scope="col" class="px-6 py-3 text-xs font-medium text-left text-gray-500 uppercase">Titre</th>
@@ -43,39 +43,39 @@
           <th scope="col" class="px-6 py-3 text-xs font-medium text-left text-gray-500 uppercase">Date</th>
         </tr>
       </thead>
-      <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
+      <tbody class="divide-y divide-gray-200 ">
         <!-- Repeat this block for each row -->
-        <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">Accident
+        <tr class="hover:bg-gray-100 ">
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">Accident
             circulation</td>
-          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap dark:text-gray-200">Boulevard General Wahis 182
+          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap ">Boulevard General Wahis 182
           </td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">John Doe</td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">30/09/2023</td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">John Doe</td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">30/09/2023</td>
           <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
             <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
           </td>
         </tr>
         <!-- Repeat the block above for each row -->
 
-        <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">Chute d'Objet en
+        <tr class="hover:bg-gray-100 ">
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">Chute d'Objet en
             Zone Publique</td>
-          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap dark:text-gray-200">Boulevard General Wahis 182
+          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap ">Boulevard General Wahis 182
           </td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">John Doe</td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">30/09/2023</td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">John Doe</td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">30/09/2023</td>
           <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
             <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
           </td>
         </tr>
 
-        <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">Incendie</td>
-          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap dark:text-gray-200">Boulevard General Wahis 182
+        <tr class="hover:bg-gray-100 ">
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">Incendie</td>
+          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap ">Boulevard General Wahis 182
           </td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">John Doe</td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap dark:text-gray-200">30/09/2023</td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">John Doe</td>
+          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">30/09/2023</td>
           <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
             <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
           </td>
