--- a/src/login.html
+++ b/src/login.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
-    <div class="flex items-center justify-center h-screen bg-red-700">
+    <form class="flex items-center justify-center h-screen bg-red-700">
         <div class="p-6 bg-white rounded-md shadow-lg w-96">
             <h1 class="text-3xl font-semibold text-center"><i class="fa-solid fa-user"></i> Login</h1>
             <hr class="mt-3">
@@ -27,6 +27,6 @@
                 <p class="text-sm">No account? <a href="/src/register.html" class="font-semibold text-red-900">Register here</a></p>
             </div>
         </div>
-    </div>
+    </form>
 </body>
 </html>
