--- a/src/register.html
+++ b/src/register.html
@@ -7,7 +7,7 @@
     <title>Register</title>
 </head>
 <body>
-    <div class="flex items-center justify-center h-screen bg-red-700">
+    <form class="flex items-center justify-center h-screen bg-red-700">
         <div class="p-6 bg-white rounded-md shadow-lg w-96">
             <h1 class="block text-3xl font-semibold text-center"><i class="fa-solid fa-user"></i> Register</h1>
             <hr class="mt-3">
@@ -34,6 +34,6 @@
                 <p class="text-sm">Already have an account? <a href="/src/login.html" class="font-semibold text-red-900">Login here</a></p>
             </div>
         </div>
-    </div>
+    </form>
 </body>
 </html>
