--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,11 @@
                 <hr class="mt-3">
                 <div class="mt-3">
                     <label for="username" class="block mb-2 text-base">Nom d'utilisateur</label>
-                    <input type="text" id="username" class="w-full px-2 py-1 text-base border focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="Entrer votre nom d'utilisateur..." />
+                    <input type="text" id="username" class="w-full px-2 py-1 text-base text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400" placeholder="Entrer votre nom d'utilisateur..." />
                 </div>
                 <div class="mt-3">
                     <label for="password" class="block mb-2 text-base">Mot de passe</label>
-                    <input type="password" id="password" class="w-full px-2 py-1 text-base border focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="Entrer votre mot de passe..." />
+                    <input type="password" id="password" class="w-full px-2 py-1 text-base text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400" placeholder="Entrer votre mot de passe..." />
                 </div>
                 <div class="mt-5">
                     <button type="submit" class="w-full py-1 font-semibold text-white rounded-md main-gradient hover:bg-transparent main-gradient-hover"><i class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;S'identifier</button>
@@ -75,19 +75,19 @@
               <hr class="mt-3">
               <div class="mt-3">
                   <label for="username" class="block mb-2 text-base">Nom d'utilisateur</label>
-                  <input type="text" id="username" class="w-full px-2 py-1 text-base border border-gray-600 rounded focus:outline-none" placeholder="Entrer votre nom d'utilisateur..." />
+                  <input type="text" id="username" class="w-full px-2 py-1 text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400" placeholder="Entrer votre nom d'utilisateur..." />
               </div>
               <div class="mt-3">
                   <label for="password" class="block mb-2 text-base">Mot de passe</label>
-                  <input type="password" id="password" class="w-full px-2 py-1 text-base border border-gray-600 rounded focus:outline-none" placeholder="Entrer votre mot de passe..." />
+                  <input type="password" id="password" class="w-full px-2 py-1 text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400" placeholder="Entrer votre mot de passe..." />
               </div>
               <div class="mt-3">
                   <label for="name" class="block mb-2 text-base">Prénom</label>
-                  <input type="text" id="name" class="w-full px-2 py-1 text-base border border-gray-600 rounded focus:outline-none" placeholder="Entrer votre prénom..." />
+                  <input type="text" id="name" class="w-full px-2 py-1 text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400" placeholder="Entrer votre prénom..." />
               </div>
               <div class="mt-3">
                   <label for="email" class="block mb-2 text-base">Email</label>
-                  <input type="text" id="email" class="w-full px-2 py-1 text-base border border-gray-600 rounded focus:outline-none" placeholder="Entrer votre email..." />
+                  <input type="text" id="email" class="w-full px-2 py-1 text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400" placeholder="Entrer votre email..." />
               </div>
               <div class="mt-5">
                   <button type="submit" class="w-full py-1 font-semibold text-white rounded-md main-gradient hover:bg-transparent main-gradient-hover"><i class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;Créer un compte</button>
