--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                   <input type="password" id="password" class="w-full px-2 py-1 text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400" placeholder="Entrer votre mot de passe..." />
               </div>
               <div class="mt-3">
-                  <label for="name" class="block mb-2 text-base">Prénom</label>
+                  <label for="name" class="block mb-2 text-base">Nom complet</label>
                   <input type="text" id="name" class="w-full px-2 py-1 text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400" placeholder="Entrer votre prénom..." />
               </div>
               <div class="mt-3">
