--- a/src/index_logged_out.html
+++ b/src/index_logged_out.html
@@ -40,13 +40,13 @@
               <div class="mt-3">
                 <label for="username" class="block mb-2 text-base">Nom d'utilisateur</label>
                 <input type="text" id="username" autofocus
-                  class="w-full px-2 py-1 text-base text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400"
+                  class="w-full px-2 py-1 text-base bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
                   placeholder="Entrer votre nom d'utilisateur..." />
               </div>
               <div class="mt-3">
                 <label for="password" class="block mb-2 text-base">Mot de passe</label>
                 <input type="password" id="password"
-                  class="w-full px-2 py-1 text-base text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400"
+                  class="w-full px-2 py-1 text-base bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
                   placeholder="Entrer votre mot de passe..." />
               </div>
               <div class="mt-5">
@@ -83,25 +83,25 @@
               <div class="mt-3">
                 <label for="username" class="block mb-2 text-base">Nom d'utilisateur</label>
                 <input type="text" id="username"
-                  class="w-full px-2 py-1 text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400"
+                  class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
                   placeholder="Entrer votre nom d'utilisateur..." />
               </div>
               <div class="mt-3">
                 <label for="password" class="block mb-2 text-base">Mot de passe</label>
                 <input type="password" id="password"
-                  class="w-full px-2 py-1 text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400"
+                  class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
                   placeholder="Entrer votre mot de passe..." />
               </div>
               <div class="mt-3">
                 <label for="name" class="block mb-2 text-base">Nom complet</label>
                 <input type="text" id="name"
-                  class="w-full px-2 py-1 text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400"
+                  class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
                   placeholder="Entrer votre prénom..." />
               </div>
               <div class="mt-3">
                 <label for="email" class="block mb-2 text-base">Email</label>
                 <input type="text" id="email"
-                  class="w-full px-2 py-1 text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400"
+                  class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
                   placeholder="Entrer votre email..." />
               </div>
               <div class="mt-5">
