fix: change incident submit button color

--- a/src/index_logged_in.html
+++ b/src/index_logged_in.html
@@ -74,7 +74,7 @@
             class="px-2 py-1 mb-4 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400">
 
           <input type="submit" value="Signaler"
-            class="px-4 py-2 font-semibold text-red-700 transition-all ease-in-out bg-transparent border border-red-700 rounded-lg duration-450 hover:bg-gradient-to-r hover:from-red-700 hover:to-red-500 hover:text-white focus:border-white">
+            class="px-4 py-2 font-semibold text-white transition-all ease-in-out rounded-lg duration-450 main-gradient main-gradient-hover">
         </form>
       </section>
     </dialog>
