--- a/src/index_logged_out.html
+++ b/src/index_logged_out.html
@@ -192,51 +192,7 @@
   <div id="date" class="absolute -translate-x-1/2 bottom-10 left-1/2">
   </div>
 
-  <script>
-    let today = new Date();
-    let day = today.getDay().toString().length == 1 ? "0" + today.getDay() : today.getDay();
-    let month = today.getMonth().toString().length == 1 ? "0" + today.getMonth() : today.getMonth();
-    let year = today.getFullYear();
-    let formatted = "Date du jour: " + day + "/" + month + "/" + year;
-    document.getElementById("date").innerText = formatted;
-
-
-    // Les parties suivantes gèrent les modals pour login/register/incident
-
-    // Partie pour le modal login
-    const showModal = document.getElementById('showLoginModal');
-    const closeModal = document.getElementById('closeLoginModal');
-    const loginModal = document.getElementById('loginModal');
-
-    showModal.addEventListener('click', () => {
-      loginModal.showModal();
-    });
-
-    closeModal.addEventListener('click', () => {
-      loginModal.close();
-    });
-
-    // Partie pour le modal register
-    const showRegisterModal = document.getElementById('showRegisterModal');
-    const closeRegisterModal = document.getElementById('closeRegisterModal');
-    const registerModal = document.getElementById('registerModal');
-
-    showRegisterModal.addEventListener('click', () => {
-      registerModal.showModal();
-    });
-
-    closeRegisterModal.addEventListener('click', () => {
-      registerModal.close();
-    });
-
-    // Partie pour le modal du formulaire d'incident
-    const showIncidentModal = document.getElementById('showIncidentModal')
-    const incidentModal = document.getElementById('incidentModal')
-
-    showIncidentModal.addEventListener('click', () => {
-      loginModal.showModal();
-    })
-  </script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
