--- a/src/index_logged_out.html
+++ b/src/index_logged_out.html
@@ -177,7 +177,7 @@
           <label for="name" class="block mb-2 text-base">Nom complet</label>
           <input type="text" id="name"
             class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
-            placeholder="Entrer votre prénom..." />
+            placeholder="Entrer votre nom..." />
         </div>
         <div class="mt-3">
           <label for="email" class="block mb-2 text-base">Email</label>
